{{$NEXT}}

1.302015  2016-05-09 07:46:54-07:00 America/Los_Angeles

    - Add Test::Alien to breakage info
    - Add Device::Chip to breakage info
    - Add subtest outdent to transition.pod

1.302014_010 2016-05-03 12:09:14-07:00 America/Los_Angeles (TRIAL RELEASE)

    - RC10
    - Update x-breaks, Breakage.pm, and Transition.POD
    - Fix shared memory leak
    - Fix typos and clarify docs.

1.302014_009 2016-04-27 10:05:18-07:00 America/Los_Angeles (TRIAL RELEASE)

    - RC9
    - No logic changes
    - Update x-breaks stuff
    - Update email addresses

1.302014_008 2016-04-26 11:40:40-07:00 America/Los_Angeles (TRIAL RELEASE)

    - RC8
    - Fix bug when using defined, but empty (or space) as a test name in a subtest
    - Better notificatons for late Test::Builder load
    - Recommend Test2::Transition if you have outdated modules
    - Document Test::Builder::TodoDiag and Test::Builder::Formatter

1.302014_007 2016-04-24 13:09:03-07:00 America/Los_Angeles (TRIAL RELEASE)

    - RC7
    - Fix #642 - Persistent environments need to have ENDING flag cleared

1.302014_006 2016-04-24 02:31:13-07:00 America/Los_Angeles (TRIAL RELEASE)

    - RC6
    - Remove reduntant and problematic parts of 00-report.t
    - No changes to actual code, just a test that provides diags

1.302014_005 2016-04-24 01:55:55-07:00 America/Los_Angeles (TRIAL RELEASE)

    - RC5
    - Prevent the breakage reporter from being a test failure
    - No changes to actual code, just a test that provides diags

1.302014_004 2016-04-23 16:21:34-07:00 America/Los_Angeles (TRIAL RELEASE)

    - RC4
    - Update breakage info
    - Fix IPC files driver to use the most significant data in the shm (needs test)

1.302014_003 2016-04-23 03:20:36-07:00 America/Los_Angeles (TRIAL RELEASE)

    - RC3
    - Localize $@ and $! when loading Data::Dumper in explain()

1.302014_002 2016-04-22 14:54:51-07:00 America/Los_Angeles (TRIAL RELEASE)

    - RC2
    - Restore X-Breaks meta info