@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Test::Builder::Tester should stash the plan (#662)
+
 1.302015  2016-05-09 07:46:54-07:00 America/Los_Angeles
 
     - Add Test::Alien to breakage info
